# NSTJAX

./: .gitignore  LICENSE  README.md  fbipoly.m  make_figures.py  make_swing_figure.py  pyproject.toml  test_fbionly.m
MATLAB_VARIANT/: fbi.m  test_fbi.m  test_fbipoly_bridge.m  test_fbipoly_compose.m  test_fbipoly_core.m  test_fbipoly_dd.m
examples/: example_drone.py  example_low_drone.py  example_low_pendulum.py  example_nstjax_drone.py  example_nstjax_pendulum.py  example_pendulum.py  example_swing_drone.py  example_thruster.py  example_wm_fbi.py  test_decoupling.py  test_fbi_fast.py  test_fbi_jax.py  test_project.py  test_solvability.py  test_solvers.py  test_taylor_poly.py  test_wm_fbi.py  th_val_mat.npy
src/NSTJAX/: __init__.py  nstjax.py
src/NSTJAX.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/NSTJAX/NSTJAX_bridge/: __init__.py  nst_encoder.py
src/NSTJAX/NSTJAX_suite/: __init__.py  decouple.py  fbi.py  fbi_eval.py  fbi_fast.py  nstjax.py  polylib.py  reporter.py  solvability.py  taylor.py
tests/: la_val_mat.npy  test_fbi_discrete.py  test_fbi_jax.py  test_refactor.py  test_solvers.py  test_taylor_poly.py  x_test_batch.npy
